@@ -2,6 +2,7 @@ VERSION 0.9.8
 -------------
 Release Date: ?
 
+ - added class Peak_Controller_Action_Json
  - fixed group by unquoted identifier of method _getData() in Peak_Model_Pagination
  - fixed order by unquoted identifier of method _getData() in Peak_Model_Pagination
  - added method quoteIdentifiers() in Peak_Model_Zendatable
